welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(100)
 required: Boolean
  if((91 <= n < 100) || (191 <= n < 200)){
                ^nearHundred:2: error: type mismatch;
 found   : Int(200)
 required: Boolean
  if((91 <= n < 100) || (191 <= n < 200)){
                                    ^